# kobuki_robot_pet

./: .gitignore  .gitmodules  README.md  add_persons.py  jung_main.py  jung_utils.py  recognize.py
datasets/face_features/: feature.npz
face_recognition/adaface/: model.py  utils.py
face_recognition/arcface/: model.py
robot_pet/: CMakeLists.txt  package.xml  setup.py
robot_pet/launch/: keyop.launch  perceiver.launch  perceiver_test.launch  wakeup.launch  wakeup_keyop.launch  wakeup_mover.launch
robot_pet/scripts/: face.py  mover.py  perceiver.py  perceiver_keyop.py  utils.py
robot_pet/src/robot_pet/: __init__.py  utils.py
robot_pet/weight/: model.h5  model2.h5
